--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@ layout: compress
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
   <head>
+    <meta name="google-site-verification" content="T4SrFwXhTozPqUYLpCrIVapOHXoNeOpg4bS1ImJYEyQ" />
     {% include head.html %}
     {% include head/custom.html %}
   </head>
